syntax = "proto3";

import "table_id.proto";

message AllTablesId {
    repeated TableId tablesId = 1;
}